target/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Class'", "'='", "'Array'", "'-'", "'!'", 
                     "'*'", "'/'", "'%'", "'+'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'+.'", "'==.'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'In'", 
                     "'..'", "'By'", "'Break'", "'Continue'", "'Return'", 
                     "'Val'", "'Var'", "'Boolean'", "'Int'", "'Float'", 
                     "'String'", "'True'", "'False'", "'Null'", "'New'", 
                     "'Self'", "'.'", "'::'", "':'", "'['", "']'", "'('", 
                     "')'", "'{'", "'}'", "';'", "','", "'Constructor'", 
                     "'Destructor'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IMMUTABLE", "MUTABLE", 
                      "BOOLTYPE", "INTTYPE", "FLOATTYPE", "STRINGTYPE", 
                      "TRUE", "FALSE", "NULL", "NEW", "SELF", "DOT", "DOUBLECOLON", 
                      "COLON", "LC", "RC", "LB", "RB", "LP", "RP", "SEMI", 
                      "COMMA", "CONSTRUCTOR", "DESTRUCTOR", "KEYWORD", "WS", 
                      "BLOCK_COMMENT", "ID", "DOLLARID", "OPERATOR", "INT10LOWERBOUND", 
                      "INT8LOWERBOUND", "INT16LOWERBOUND", "INT2LOWERBOUND", 
                      "INT0", "FLOAT", "STRING", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_decls = 1
    RULE_class_decl = 2
    RULE_parent = 3
    RULE_class_body = 4
    RULE_class_member = 5
    RULE_member = 6
    RULE_attribute_decl = 7
    RULE_attr_equal = 8
    RULE_attr_list = 9
    RULE_expr_list = 10
    RULE_method_decl = 11
    RULE_normal = 12
    RULE_method_params = 13
    RULE_param_decl = 14
    RULE_id_list = 15
    RULE_block_statement = 16
    RULE_state_list = 17
    RULE_special = 18
    RULE_constructor = 19
    RULE_block_constructor = 20
    RULE_destructor = 21
    RULE_block_destructor = 22
    RULE_typedecl = 23
    RULE_array_type = 24
    RULE_primitive_type = 25
    RULE_intlitlowerbound = 26
    RULE_class_type = 27
    RULE_bool_value = 28
    RULE_int_value = 29
    RULE_float_value = 30
    RULE_string_value = 31
    RULE_class_value = 32
    RULE_array_value = 33
    RULE_muldim_array = 34
    RULE_operand = 35
    RULE_instance_attr_access = 36
    RULE_static_attr_access = 37
    RULE_instance_method_access = 38
    RULE_static_method_access = 39
    RULE_object_creation = 40
    RULE_expr = 41
    RULE_scalar_type = 42
    RULE_statement = 43
    RULE_varconst_decl = 44
    RULE_attrId_equal = 45
    RULE_attrId_list = 46
    RULE_ass = 47
    RULE_ifstmt = 48
    RULE_if_stmt = 49
    RULE_elseif_stmt = 50
    RULE_else_stmt = 51
    RULE_forstmt = 52
    RULE_breakstmt = 53
    RULE_continuestmt = 54
    RULE_retu = 55
    RULE_method_invoke = 56

    ruleNames =  [ "program", "class_decls", "class_decl", "parent", "class_body", 
                   "class_member", "member", "attribute_decl", "attr_equal", 
                   "attr_list", "expr_list", "method_decl", "normal", "method_params", 
                   "param_decl", "id_list", "block_statement", "state_list", 
                   "special", "constructor", "block_constructor", "destructor", 
                   "block_destructor", "typedecl", "array_type", "primitive_type", 
                   "intlitlowerbound", "class_type", "bool_value", "int_value", 
                   "float_value", "string_value", "class_value", "array_value", 
                   "muldim_array", "operand", "instance_attr_access", "static_attr_access", 
                   "instance_method_access", "static_method_access", "object_creation", 
                   "expr", "scalar_type", "statement", "varconst_decl", 
                   "attrId_equal", "attrId_list", "ass", "ifstmt", "if_stmt", 
                   "elseif_stmt", "else_stmt", "forstmt", "breakstmt", "continuestmt", 
                   "retu", "method_invoke" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    IMMUTABLE=30
    MUTABLE=31
    BOOLTYPE=32
    INTTYPE=33
    FLOATTYPE=34
    STRINGTYPE=35
    TRUE=36
    FALSE=37
    NULL=38
    NEW=39
    SELF=40
    DOT=41
    DOUBLECOLON=42
    COLON=43
    LC=44
    RC=45
    LB=46
    RB=47
    LP=48
    RP=49
    SEMI=50
    COMMA=51
    CONSTRUCTOR=52
    DESTRUCTOR=53
    KEYWORD=54
    WS=55
    BLOCK_COMMENT=56
    ID=57
    DOLLARID=58
    OPERATOR=59
    INT10LOWERBOUND=60
    INT8LOWERBOUND=61
    INT16LOWERBOUND=62
    INT2LOWERBOUND=63
    INT0=64
    FLOAT=65
    STRING=66
    UNCLOSE_STRING=67
    ILLEGAL_ESCAPE=68
    ERROR_CHAR=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decls(self):
            return self.getTypedRuleContext(D96Parser.Class_declsContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.class_decls()
            self.state = 115
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decls" ):
                return visitor.visitClass_decls(self)
            else:
                return visitor.visitChildren(self)




    def class_decls(self):

        localctx = D96Parser.Class_declsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_decls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.class_decl()
                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.T__0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def class_body(self):
            return self.getTypedRuleContext(D96Parser.Class_bodyContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def parent(self):
            return self.getTypedRuleContext(D96Parser.ParentContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(D96Parser.T__0)
            self.state = 123
            self.match(D96Parser.ID)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 124
                self.parent()


            self.state = 127
            self.match(D96Parser.LP)
            self.state = 128
            self.class_body()
            self.state = 129
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_parent

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParent" ):
                return visitor.visitParent(self)
            else:
                return visitor.visitChildren(self)




    def parent(self):

        localctx = D96Parser.ParentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(D96Parser.COLON)
            self.state = 132
            self.match(D96Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_memberContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_memberContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_body" ):
                return visitor.visitClass_body(self)
            else:
                return visitor.visitChildren(self)




    def class_body(self):

        localctx = D96Parser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.IMMUTABLE) | (1 << D96Parser.MUTABLE) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.DOLLARID))) != 0):
                self.state = 134
                self.class_member()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_decl(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(D96Parser.Method_declContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_member" ):
                return visitor.visitClass_member(self)
            else:
                return visitor.visitChildren(self)




    def class_member(self):

        localctx = D96Parser.Class_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_member)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.IMMUTABLE, D96Parser.MUTABLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.attribute_decl()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.method_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_member)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLARID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attr_list(self):
            return self.getTypedRuleContext(D96Parser.Attr_listContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typedecl(self):
            return self.getTypedRuleContext(D96Parser.TypedeclContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def IMMUTABLE(self):
            return self.getToken(D96Parser.IMMUTABLE, 0)

        def MUTABLE(self):
            return self.getToken(D96Parser.MUTABLE, 0)

        def attr_equal(self):
            return self.getTypedRuleContext(D96Parser.Attr_equalContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_decl" ):
                return visitor.visitAttribute_decl(self)
            else:
                return visitor.visitChildren(self)




    def attribute_decl(self):

        localctx = D96Parser.Attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute_decl)
        self._la = 0 # Token type
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                _la = self._input.LA(1)
                if not(_la==D96Parser.IMMUTABLE or _la==D96Parser.MUTABLE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 147
                self.attr_list()
                self.state = 148
                self.match(D96Parser.COLON)
                self.state = 149
                self.typedecl()
                self.state = 150
                self.match(D96Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                _la = self._input.LA(1)
                if not(_la==D96Parser.IMMUTABLE or _la==D96Parser.MUTABLE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 153
                self.attr_equal()
                self.state = 154
                self.match(D96Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_equalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def attr_equal(self):
            return self.getTypedRuleContext(D96Parser.Attr_equalContext,0)


        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typedecl(self):
            return self.getTypedRuleContext(D96Parser.TypedeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attr_equal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_equal" ):
                return visitor.visitAttr_equal(self)
            else:
                return visitor.visitChildren(self)




    def attr_equal(self):

        localctx = D96Parser.Attr_equalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attr_equal)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.member()
                self.state = 159
                self.match(D96Parser.COMMA)
                self.state = 160
                self.attr_equal()
                self.state = 161
                self.match(D96Parser.COMMA)
                self.state = 162
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.member()

                self.state = 165
                self.match(D96Parser.COLON)
                self.state = 166
                self.typedecl()
                self.state = 167
                self.match(D96Parser.T__1)
                self.state = 169
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.MemberContext)
            else:
                return self.getTypedRuleContext(D96Parser.MemberContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_attr_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_list" ):
                return visitor.visitAttr_list(self)
            else:
                return visitor.visitChildren(self)




    def attr_list(self):

        localctx = D96Parser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.member()
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 174
                self.match(D96Parser.COMMA)
                self.state = 175
                self.member()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExprContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def getRuleIndex(self):
            return D96Parser.RULE_expr_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_list" ):
                return visitor.visitExpr_list(self)
            else:
                return visitor.visitChildren(self)




    def expr_list(self):

        localctx = D96Parser.Expr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.expr(0)
            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.COMMA:
                self.state = 182
                self.match(D96Parser.COMMA)
                self.state = 183
                self.expr(0)
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def normal(self):
            return self.getTypedRuleContext(D96Parser.NormalContext,0)


        def special(self):
            return self.getTypedRuleContext(D96Parser.SpecialContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method_decl
